# crates

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  LICENSE.TXT  README.md  build.sh  mainpage.dox
backup/uas_controller/: CMakeLists.txt  package.xml
backup/uas_controller/resources/worlds/: simulation.world
backup/uas_controller/src/: Interface.cpp
backup/uas_controller/src/model/: AHRS.cpp  AHRS.h  Altimeter.cpp  Compass.cpp  Energy.h  IMU.cpp  IMU.h  Model.h  Propulsion.cpp  Propulsion.h
backup/uas_controller/src/world/: Environment.cpp  Environment.h  Meteorological.h  Satellites.cpp  Satellites.h
backup/uas_controller/srv/: Step.srv
examples/cpp/: CMakeLists.txt  README  main.cpp
examples/java/: CMakeLists.txt  README  build.gradle  example.java  package.xml  settings.gradle
examples/java/example/: build.gradle
examples/java/hal_quadrotor/: build.gradle
examples/java/hal_sensor_gnss/: build.gradle
examples/java/hal_sensor_orientation/: build.gradle
examples/move_quadrotor/: CMakeLists.txt  main.cpp
examples/move_quadrotor/include/: Navigate.h
examples/move_quadrotor/src/: Navigate.cpp
install/share/hal_quadrotor/: package.xml
install/share/hal_quadrotor/cmake/: hal_quadrotor-msg-extras.cmake  hal_quadrotor-msg-paths.cmake  hal_quadrotorConfig.cmake
install/share/hal_quadrotor/msg/: Control.msg
install/share/hal_quadrotor/srv/: SetControl.srv  Velocity.srv
install/share/hal_sensor_gnss/: package.xml
install/share/hal_sensor_gnss/cmake/: hal_sensor_gnss-msg-extras.cmake  hal_sensor_gnss-msg-paths.cmake  hal_sensor_gnssConfig.cmake
install/share/hal_sensor_gnss/msg/: Data.msg
src/bs/: CMakeLists.txt  package.xml
src/bs/cmake/: FindGPSTK.cmake
src/bs/launch/: exp.launch  gui.launch  sim.launch
src/bs/msg/: Collisions.msg
src/bs/resources/gnss/: igl15652.sp3
src/bs/resources/worlds/: hawkshead.world
src/bs/scripts/: client_debug
src/bs/src/: Experiment.cpp  Paths.cpp  Simulation.cpp  Temp.cpp
src/bs/src/msgs/: CMakeLists.txt  environment.proto  meteorological.proto
src/crates_msgs/: CMakeLists.txt  Description.dox  build.gradle  package.xml  settings.gradle
src/crates_msgs/gradle/wrapper/: gradle-wrapper.properties
src/crates_msgs/hal/: build.gradle
src/crates_msgs/hal_sensor_altimeter/: build.gradle
src/crates_msgs/hal_sensor_compass/: build.gradle
src/crates_msgs/hal_sensor_imu/: build.gradle
src/crates_msgs/sim/: build.gradle
src/device_asctec/: CMakeLists.txt  Description.dox  nodelet.xml  package.xml
src/device_asctec/src/: FlightControlSystem.cpp
src/device_asctec/src/aci/: asctecDefines.h
src/device_asctec/src/serial/: AsyncSerial.h
src/dronekey_wireless/: CMakeLists.txt  package.xml
src/dronekey_wireless/include/dronekey_wireless/: Wireless.h
src/dronekey_wireless/src/: Wireless.cpp
src/hal_quadrotor/: CMakeLists.txt  Description.dox  README  package.xml
src/hal_quadrotor/include/hal_quadrotor/: Actuation.h  Communication.h  HAL.h  Navigation.h  Quadrotor.h  Service.h  Topic.h
src/hal_quadrotor/msg/: Control.msg  Inertial.msg  State.msg
src/hal_quadrotor/resources/: rvc.kml
src/hal_quadrotor/src/: Actuation.cpp  Communication.cpp  Navigation.cpp  Quadrotor.cpp  Service.cpp  Topic.cpp  mainpage.dox
src/hal_quadrotor/src/configuration/: Rate.cpp
src/hal_quadrotor/src/control/: AnglesHeight.cpp  Controller.cpp  Emergency.cpp  Hover.cpp  Idle.cpp  Land.cpp  Takeoff.cpp  Velocity.cpp  VelocityHeight.cpp  Waypoint.cpp
src/hal_quadrotor/src/controller/: AnglesHeight.cpp  Emergency.cpp  Hover.cpp  Idle.cpp  Land.cpp  Takeoff.cpp  Velocity.cpp  VelocityHeight.cpp  Waypoint.cpp
src/hal_quadrotor/srv/: ConfigRate.srv  ControlHover.srv  ControlRate.srv  GetControl.srv  GetTruth.srv  Packet.srv  SetEstimate.srv
src/hal_quadrotor/test/: TEST_QuadrotorHAL.cpp
src/hal_sensor_energy/: CMakeLists.txt  Description.dox  package.xml
src/hal_sensor_energy/msg/: Data.msg
src/hal_sensor_energy/src/: Energy.cpp
src/hal_sensor_transceiver/: CMakeLists.txt  package.xml
src/hal_sensor_transceiver/msg/: Data.msg
src/hal_sensor_transceiver/src/: Receiver.cpp  Transmitter.cpp
src/platform_asctec/: CMakeLists.txt  Description.dox  nodelet.xml  package.xml
src/platform_asctec/launch/: hummingbird.launch  pelican.launch
src/platform_asctec/models/hummingbird/: model.sdf
src/platform_asctec/scripts/: wpa.sh
src/platform_asctec/src/: FlightControlSystem.cpp
src/platform_asctec/tools/: deploy.sh  interfaces  wpa_supplicant.conf
src/scenarios_complacs/: CMakeLists.txt  Description.dox  package.xml
src/scenarios_complacs/launch/: sim-catmouse.launch
src/sim/: CMakeLists.txt  Description.dox  package.xml  setup.py
src/sim/launch/: gui.launch  hw.launch  simulation.launch  sw.launch
src/sim/msg/: Collisions.msg  ContactsState.msg
src/sim/scripts/: client  client_debug  server  server_debug
src/sim/src/: Client.cpp  Client.h  ServerSimulation.cpp  ServerSimulation.h  gazebo_ros_api_plugin.cpp  gazebo_ros_api_plugin.h
src/sim/srv/: AddModel.srv  GetLinkState.srv  GetPhysicsProperties.srv  Insert.srv  Noise.srv  Resume.srv  Seed.srv  SetJointProperties.srv  SetLinkState.srv  SetModelState.srv  SetPhysicsProperties.srv  Wireless.srv
src/sim/tests/: TEST_sim_noise.cpp
src/sim_plugin_compass/: CMakeLists.txt  package.xml
src/test/: CMakeLists.txt  package.xml
src/test/launch/: test.launch
src/test/src/: test.cpp
src/uas_controller/: CMakeLists.txt
src/uas_controller/launch/: exp.launch  gui.launch  sim.launch
src/uas_controller/src/: experiment.cpp  gpstest.cpp  noise.cpp  noise.h  simulation.cpp  simulator.cpp
src/uas_controller/srv/: Pause.srv
src/uas_hal/: CMakeLists.txt  package.xml
src/uas_hal/action/: AnglesHeight.action  Emergency.action  Waypoint.action
src/uas_hal/msg/: Inertial.msg  Information.msg  MsgAltitude.msg  MsgAttitude.msg  MsgControl.msg  MsgInertial.msg  MsgInformation.msg  MsgMagnetic.msg  MsgOrientation.msg  MsgPosition.msg  MsgState.msg  State.msg
src/uas_hal/src/: Control.cpp  Controller.cpp  HAL.cpp  Peripheral.cpp  UAV.cpp
(+882 files in other folders)
