<?xml version="1.0"?>
<package>

  <name>uas_controller</name>
  <version>0.0.1</version>

  <description>The uas_controller package</description>

  <maintainer email="a.symington@ucl.ac.uk">Andrew Symington</maintainer>

  <author email="r.denardi@ucl.ac.uk">Renzo De Nardi</author>

  <license>BSD</license>

  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>uas_hal</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>uas_hal</run_depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/resources"/>
  </export>
  
</package>