<?xml version="1.0"?>
<package>

  <name>dronekey_wireless</name>
  
  <version>0.1.0</version>
  
  <description>Simulate a wireless environment!! Enable quadcopter to send and receive data</description>
  
  <author email="johann.mifsud.13@ucl.ac.uk">Johann Mifsud</author>
  <author email="grigorios.lyras.13@ucl.ac.uk">Greg Lyras</author>
  <maintainer email="johann.mifsud.13@ucl.ac.uk">Johann Mifsud</maintainer>
  <license>PLEASE REFER TO LICENCE IN PROJECT ROOT</license>  
  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>