<?xml version="1.0"?>
<package>

  <name>hal_sensor_transceiver</name>
  
  <version>0.1.0</version>
  
  <description>Provides an abstract class for a wireless environment.</description>
  
  <author email="johann.mifsud.13@ucl.ac.uk">Johann Mifsud</author>
  <author email="grigorios.lyras.13@ucl.ac.uk">Gregorious Lyras</author>
  <maintainer email="johann.mifsud.13@ucl.ac.uk">Johann Mifsud</maintainer>
  <license>PLEASE REFER TO LICENCE IN PROJECT ROOT</license>  
  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hal</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hal</run_depend>
  
</package>