<?xml version="1.0"?>
<package>

  <name>platform_complacs</name>
  
  <version>0.0.1</version>
  
  <description>The platform_complacs spackage</description>
  
  <maintainer email="a.symington@ucl.ac.uk">Andrew Symington</maintainer>
  <author email="r.denardi@ucl.ac.uk">Renzo De Nardi</author>
  
  <license>BSD</license>
  
  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>uas_hal</build_depend>
  <build_depend>nodelet</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>uas_hal</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>

</package>