<?xml version="1.0"?>
<package>

  <name>scenarios_complacs</name>
  
  <version>0.1.0</version>
  
  <description>Provides all simulation elements required for CompLACS problem scenarios.</description>
  
  <author email="a.symington@ucl.ac.uk">Andrew Symington</author>
  <author email="r.denardi@ucl.ac.uk">Renzo De Nardi</author>
  <maintainer email="a.symington@ucl.ac.uk">Andrew Symington</maintainer>
  <license>PLEASE REFER TO LICENCE IN PROJECT ROOT</license>  
  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sim</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sim</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>

</package>